--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#ccccff">
+    android:background="@color/app_bg">
+    <androidx.cardview.widget.CardView
+        android:backgroundTint="@color/card_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="150dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="@dimen/card_radius">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fcf6e6"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="150dp"
         >
 
         <TextView
@@ -24,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="@string/mainTitle"
             android:textAlignment="center"
-            android:textSize="35sp"
+            android:textSize="@dimen/text_large"
             android:paddingTop="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +41,7 @@
             android:layout_height="wrap_content"
             android:text="@string/subtitle"
             android:textAlignment="center"
-            android:textSize="17sp"
+            android:textSize="@dimen/text_subtitle"
             android:paddingTop="40dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -55,7 +59,7 @@
             app:layout_constraintTop_toBottomOf="@id/subtitleText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:backgroundTint="#0BCE83"
+            android:backgroundTint="@color/btn_success"
             android:onClick="onLoginClick"/>
 
         <Button
@@ -67,8 +71,8 @@
             app:layout_constraintTop_toBottomOf="@id/loginBtn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:backgroundTint="#fcf6e6"
-            android:textColor="#9586A8"
+            android:backgroundTint="@color/btn_transparent"
+            android:textColor="@color/text_neutral"
             android:onClick="onSignupDonorClick"/>
 
         <Button
@@ -80,9 +84,10 @@
             app:layout_constraintTop_toBottomOf="@id/signupDonorBtn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:backgroundTint="#fcf6e6"
-            android:textColor="#9586A8"
+            android:backgroundTint="@color/btn_transparent"
+            android:textColor="@color/text_neutral"
             android:onClick="onSignupBBClick"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
