--- a/app/src/main/res/layout/activity_signup_bb.xml
+++ b/app/src/main/res/layout/activity_signup_bb.xml
@@ -5,17 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignupActivity"
-    android:background="#ccccff">
+    android:background="@color/app_bg">
+    <androidx.cardview.widget.CardView
+        android:backgroundTint="@color/card_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="120dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="@dimen/card_radius">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fcf6e6"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="110dp"
         >
 
         <TextView
@@ -24,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="@string/signupBB"
             android:textAlignment="center"
-            android:textSize="35sp"
+            android:textSize="@dimen/text_large"
             android:paddingTop="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,10 +47,10 @@
             app:layout_constraintTop_toBottomOf="@id/titleText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/editTextContact"/>
+            app:layout_constraintBottom_toTopOf="@id/editTextPhone"/>
 
         <EditText
-            android:id="@+id/editTextContact"
+            android:id="@+id/editTextPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -68,7 +72,7 @@
             android:inputType="textEmailAddress"
             tools:layout_editor_absoluteX="89dp"
             tools:layout_editor_absoluteY="73dp"
-            app:layout_constraintTop_toBottomOf="@id/editTextContact"
+            app:layout_constraintTop_toBottomOf="@id/editTextPhone"
             app:layout_constraintBottom_toTopOf="@id/editTextPassword"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -100,10 +104,11 @@
             app:layout_constraintTop_toBottomOf="@id/editTextPassword"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:backgroundTint="#0BCE83"
+            android:backgroundTint="@color/btn_success"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="30dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
