--- a/app/src/main/res/layout/activity_signup_donor.xml
+++ b/app/src/main/res/layout/activity_signup_donor.xml
@@ -5,16 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignupActivity"
-    android:background="#ccccff">
+    android:background="@color/app_bg">
+    <androidx.cardview.widget.CardView
+        android:backgroundTint="@color/card_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="@dimen/card_radius">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fcf6e6"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="110dp"
         >
 
         <TextView
@@ -23,7 +27,7 @@
             android:layout_height="wrap_content"
             android:text="@string/signupDonor"
             android:textAlignment="center"
-            android:textSize="35sp"
+            android:textSize="@dimen/text_large"
             android:paddingTop="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,10 +117,10 @@
             app:layout_constraintTop_toBottomOf="@id/editTextPassword"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:backgroundTint="#0BCE83"
+            android:backgroundTint="@color/btn_success"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="30dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
