--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="app_bg">#7c3c8c</color>
+    <color name="card_bg">#f5f0e1</color>
+    <color name="btn_success">#0BCE83</color>
+    <color name="btn_transparent">#f5f0e1</color>
+    <color name="text_neutral">#9586A8</color>
 </resources>
