--- a/app/src/main/res/layout/activity_my_bbprofile.xml
+++ b/app/src/main/res/layout/activity_my_bbprofile.xml
@@ -66,6 +66,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:ems="10"
+                android:maxLength="10"
                 android:inputType="phone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
