--- a/app/src/main/res/layout/activity_all_dontaion_request.xml
+++ b/app/src/main/res/layout/activity_all_dontaion_request.xml
@@ -39,9 +39,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:scrollbars="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/pageHeading">
+        app:layout_constraintTop_toBottomOf="@id/pageHeading"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -54,8 +56,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
