Added new icon for create request

--- a/app/src/main/res/layout/activity_create_request.xml
+++ b/app/src/main/res/layout/activity_create_request.xml
@@ -89,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/createReqTxtEmergency"
-                app:layout_constraintBottom_toTopOf="@id/createReqFillAddress"
+                app:layout_constraintBottom_toTopOf="@id/createBtn"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/createReqChkNo"
                 android:text="Yes"
@@ -101,29 +101,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/createReqTxtEmergency"
-                app:layout_constraintBottom_toTopOf="@id/createReqFillAddress"
+                app:layout_constraintBottom_toTopOf="@id/createBtn"
                 app:layout_constraintLeft_toRightOf="@id/createReqChkYes"
                 app:layout_constraintRight_toRightOf="parent"
                 android:text="No"
                 style="@style/style_createReq_Text"
                 android:onClick="onCheckboxClicked"
                 />
-            <CheckBox
-                android:id="@+id/createReqFillAddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/createReqChkYes"
-                app:layout_constraintBottom_toTopOf="@id/createBtn"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:text="Fill with my Address details"
-                style="@style/style_createReq_Text"
-                />
+
             <Button
                 android:id="@+id/createBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/createReqFillAddress"
+                app:layout_constraintTop_toBottomOf="@id/createReqTxtEmergency"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
