--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -19,28 +19,41 @@
 
             <ImageButton
                 android:id="@+id/imageButton4"
-                android:layout_width="wrap_content"
+                android:layout_width="103dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/white"
-                app:srcCompat="@drawable/ic_my_profile_foreground"
-                android:onClick="onMyProfileClick"/>
+                android:onClick="onMyProfileClick"
+                app:srcCompat="@drawable/ic_my_profile_foreground" />
 
             <ImageButton
                 android:id="@+id/imageButton5"
-                android:layout_width="wrap_content"
+                android:layout_width="114dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/white"
-                app:srcCompat="@drawable/ic_list_foreground"
-                android:onClick="showDonationsList"/>
+                android:onClick="showDonationsList"
+                app:srcCompat="@drawable/ic_list_foreground" />
 
             <ImageButton
                 android:id="@+id/imageButton6"
+                android:layout_width="141dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/white"
+                android:onClick="showRequestsList"
+                app:srcCompat="@drawable/ic_notification_foreground" />
+
+            <ImageButton
+                android:id="@+id/imageButton7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/white"
-                app:srcCompat="@drawable/ic_notification_foreground"
-                android:onClick="showRequestsList"/>
+                android:src="@drawable/ic_create_new_req_foreground"
+                android:onClick="createNewReq"
+
+                />
+
+
         </LinearLayout>
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
