--- a/app/src/main/res/layout-land/activity_signup_donor.xml
+++ b/app/src/main/res/layout-land/activity_signup_donor.xml
@@ -68,10 +68,10 @@
                 app:layout_constraintTop_toBottomOf="@id/editTextName"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/editTextContact"/>
+                app:layout_constraintBottom_toTopOf="@id/editTextPhone"/>
 
             <EditText
-                android:id="@+id/editTextContact"
+                android:id="@+id/editTextPhone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -91,7 +91,7 @@
                 android:ems="10"
                 android:layout_marginTop="20dp"
                 android:inputType="textEmailAddress"
-                app:layout_constraintTop_toBottomOf="@id/editTextContact"
+                app:layout_constraintTop_toBottomOf="@id/editTextPhone"
                 app:layout_constraintBottom_toTopOf="@id/editTextPassword"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
